# testsandboxapi

./: com.github.mwleeds.testsandboxapi.json  meson.build  snapcraft.yaml
data/: com.github.mwleeds.testsandboxapi.appdata.xml.in  com.github.mwleeds.testsandboxapi.desktop.in  com.github.mwleeds.testsandboxapi.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  testsandboxapi-window.c  testsandboxapi-window.h  testsandboxapi-window.ui  testsandboxapi.gresource.xml
